# pd-29

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  pytest.ini
ads/: admin.py  apps.py  models.py  urls.py  views.py
ads/filters/: category_id_filter_backend.py  location_filter_backend.py  price_filter_backend.py
ads/migrations/: 0001_initial.py  0002_initial.py  0003_alter_ad_is_published_alter_ad_price.py  0004_alter_ad_price.py  0005_alter_ad_price.py
ads/serializers/: ad_serializer.py  category_serializer.py
categories/: admin.py  models.py  views.py
categories/migrations/: 0001_initial.py
categories/serializers/: category_serializer.py
locations/: models.py  views.py
locations/migrations/: 0001_initial.py
locations/serializers/: location_serializer.py
selections/: admin.py  apps.py  models.py  views.py
selections/migrations/: 0001_initial.py  0002_alter_selection_items.py
selections/serializers/: selection_serializer.py
share/api/: custom_validators.py  default_pagination_set.py  permissions.py  tests.py
share/dataset_utils/: convert_models.py  csv_to_model.py  db_utils.py  make-db.py
share/migration/: convert_models.py  csv_to_model.py  db_utils.py
siesta/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  fixtures.py
tests/ads/: create_ad_test.py  get_ad_once_test.py  get_ads_list_test.py
tests/selections/: create_selection_test.py
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_age_alter_user_birth_date.py  0003_alter_user_role.py  (+2 more)
(+9 files in other folders)
